libcm4all-was (0.3) unstable; urgency=low

  * simple: reuse connection after discarding request body
  * simple: handle WAS_COMMAND_PREMATURE
  * protocol: documentation

 --   

libcm4all-was (0.2) unstable; urgency=low

  * simple: flush the control buffer in _end()
  * simple: auto-dispose the unused request body
  * support WebDAV

 -- Max Kellermann <mk@cm4all.com>  Wed, 13 Nov 2013 17:15:27 -0000

libcm4all-was (0.1) unstable; urgency=low

  * initial release

 -- Max Kellermann <mk@cm4all.com>  Wed, 09 Feb 2011 15:18:03 +0100